--- a/configs/eval_dancetrack_putr.yaml
+++ b/configs/eval_dancetrack_putr.yaml
@@ -4,9 +4,9 @@
 
 GIT_VERSION:
 
-MODE: train
+MODE: submit
 CONFIG_PATH:
-VISUALIZE: False
+VISUALIZE: True
 AVAILABLE_GPUS: 0,
 DEVICE: cuda
 OUTPUTS_DIR: ./outputs/putr_dancetrack/
@@ -16,23 +16,16 @@ RESUME:
 RESUME_SCHEDULER: True
 MULTI_CHECKPOINT: False
 
-
-
-# About data processing
-DATASET: DanceTrack
-USE_VAL: False
-USE_MOTSYNTH:
-USE_CROWDHUMAN:
-MOTSYNTH_RATE:
-DATA_ROOT:
-DATA_PATH:
-NUM_WORKERS: 8
-BATCH_SIZE: 4
-ACCUMULATION_STEPS: 32
-COCO_SIZE: False
-OVERFLOW_BBOX: False
-REVERSE_CLIP: 0.0
-SEND_IMG: True
+# About submit
+SUBMIT_MODEL:  /home/lcw/hdd/projects/PuTR/outputs/putr_dancetrack/exp/固定512-6-train_2024-04-23-11-30/checkpoint_5.pth
+SUBMIT_DATA_SPLIT: val
+DET_SCORE_THRESH: 0.1
+TRACK_SCORE_THRESH: 0.6
+MISS_TOLERANCE: 30
+MAX_NFRAMES: 30
+MIN_TRACK_HITS: 3
+NEW_TRK_TOLERANCE: 3
+DETS_IOU_THRESH: 0.3
 
 # About model
 DIM: 512
@@ -42,22 +35,19 @@ NORM_EPS: 1.0e-5
 PATCH_GRID: 64
 MAX_SEQ_LEN: 4096
 
-# Pretrain model
-PRETRAINED_MODEL:
+# About data processing
+DATASET: DanceTrack
+USE_MOTSYNTH:
+USE_CROWDHUMAN:
+MOTSYNTH_RATE:
+DATA_ROOT:
+DATA_PATH:
+NUM_WORKERS: 8
+BATCH_SIZE: 64
+ACCUMULATION_STEPS: 1
+COCO_SIZE: False
+OVERFLOW_BBOX: False
+REVERSE_CLIP: 0.0
+SEND_IMG: True
 
-# Sampling setting
-SAMPLE_STEPS: [1, 2, 3, 4, 5, 6]
-SAMPLE_LENGTHS: [4, 8, 16, 32, 64, 128]
-SAMPLE_MODES: [random_interval]
-SAMPLE_INTERVALS: [10]
 
-# Training setting
-SEED: 42
-EPOCHS: 7
-DROP_OUT: 0.0
-LR: 2.0e-4
-WEIGHT_DECAY: 0.0005
-CLIP_MAX_NORM: 1.0
-LR_SCHEDULER: Cosine
-LR_DROP_RATE:
-LR_DROP_MILESTONES:
