--- a/configs/train_sportsmot_putr.yaml
+++ b/configs/train_sportsmot_putr.yaml
@@ -9,7 +9,7 @@ CONFIG_PATH:
 VISUALIZE: False
 AVAILABLE_GPUS: 0,
 DEVICE: cuda
-OUTPUTS_DIR: ./outputs/putr_dancetrack/
+OUTPUTS_DIR: ./outputs/putr_sportsmot/
 USE_DISTRIBUTED: False
 
 RESUME:
@@ -19,7 +19,7 @@ MULTI_CHECKPOINT: False
 
 
 # About data processing
-DATASET: DanceTrack
+DATASET: SportsMOT
 USE_VAL: False
 USE_MOTSYNTH:
 USE_CROWDHUMAN:
