--- a/configs/train_mot20_putr.yaml
+++ b/configs/train_mot20_putr.yaml
@@ -1,7 +1,3 @@
-# @Author       : Ruopeng Gao
-# @Description  : Config for training DanceTrack.
-#                 We change some parameters compared with our paper, looking forward more stable training convergence.
-
 GIT_VERSION:
 
 MODE: train
@@ -9,7 +5,7 @@ CONFIG_PATH:
 VISUALIZE: False
 AVAILABLE_GPUS: 0,
 DEVICE: cuda
-OUTPUTS_DIR: ./outputs/putr_dancetrack/
+OUTPUTS_DIR: ./outputs/putr_mot20/
 USE_DISTRIBUTED: False
 
 RESUME:
@@ -19,7 +15,7 @@ MULTI_CHECKPOINT: False
 
 
 # About data processing
-DATASET: DanceTrack
+DATASET: MOT20
 USE_MOTSYNTH:
 USE_CROWDHUMAN:
 MOTSYNTH_RATE:
@@ -46,13 +42,14 @@ PRETRAINED_MODEL:
 
 # Sampling setting
 SAMPLE_STEPS: [1, 2, 3, 4, 5, 6]
-SAMPLE_LENGTHS: [4, 8, 16, 32, 64, 128]
+SAMPLE_LENGTHS: [4, 8, 16, 32, 64, 64]
 SAMPLE_MODES: [random_interval]
 SAMPLE_INTERVALS: [10]
 
 # Training setting
 SEED: 42
 EPOCHS: 7
+SAVE_MEMORY: True
 DROP_OUT: 0.0
 LR: 2.0e-4
 WEIGHT_DECAY: 0.0005
