--- a/configs/eval_mot17_putr.yaml
+++ b/configs/eval_mot17_putr.yaml
@@ -1,7 +1,3 @@
-# @Author       : Ruopeng Gao
-# @Description  : Config for training DanceTrack.
-#                 We change some parameters compared with our paper, looking forward more stable training convergence.
-
 GIT_VERSION:
 
 MODE: submit
@@ -17,8 +13,7 @@ RESUME_SCHEDULER: True
 MULTI_CHECKPOINT: False
 
 # About submit
-SUBMIT_MODEL: /home/lcw/hdd/projects/PuTR/论文数据/mix/train_2024-04-24-11-53/checkpoint_6.pth
-#  /home/lcw/hdd/projects/PuTR/论文数据/mot17/无初始化直接训练train_2024-04-24-17-02/checkpoint_6.pth
+SUBMIT_MODEL: /home/lcw/hdd/projects/PuTR/论文数据/mot17/无初始化直接训练train_2024-04-24-17-02/checkpoint_6.pth
 SUBMIT_DATA_SPLIT: test
 DET_SCORE_THRESH: 0.1
 TRACK_SCORE_THRESH: 0.6
