--- a/configs/eval_mot17_putr.yaml
+++ b/configs/eval_mot17_putr.yaml
@@ -2,18 +2,14 @@ GIT_VERSION:
 
 MODE: submit
 CONFIG_PATH:
-VISUALIZE: True
+VISUALIZE: False
 AVAILABLE_GPUS: 0,
 DEVICE: cuda
 OUTPUTS_DIR: ./outputs/putr_mot17/
 USE_DISTRIBUTED: False
 
-RESUME:
-RESUME_SCHEDULER: True
-MULTI_CHECKPOINT: False
-
 # About submit
-SUBMIT_MODEL: /home/lcw/hdd/projects/PuTR/论文数据/mot17/无初始化直接训练train_2024-04-24-17-02/checkpoint_6.pth
+SUBMIT_MODEL:
 SUBMIT_DATA_SPLIT: test
 DET_SCORE_THRESH: 0.1
 TRACK_SCORE_THRESH: 0.6
@@ -31,21 +27,9 @@ N_LAYERS: 6
 N_HEADS: 8
 NORM_EPS: 1.0e-5
 PATCH_GRID: 64
-MAX_SEQ_LEN: 4096
 
 # About data processing
 DATASET: MOT17
-USE_MOTSYNTH:
-USE_CROWDHUMAN:
-MOTSYNTH_RATE:
 DATA_ROOT:
-DATA_PATH:
-NUM_WORKERS: 8
-BATCH_SIZE: 64
-ACCUMULATION_STEPS: 1
-COCO_SIZE: False
-OVERFLOW_BBOX: False
-REVERSE_CLIP: 0.0
-SEND_IMG: True
 
 
