--- a/configs/train_mot17_putr.yaml
+++ b/configs/train_mot17_putr.yaml
@@ -12,15 +12,9 @@ RESUME:
 RESUME_SCHEDULER: True
 MULTI_CHECKPOINT: False
 
-
-
 # About data processing
 DATASET: MOT17
-USE_MOTSYNTH:
-USE_CROWDHUMAN:
-MOTSYNTH_RATE:
 DATA_ROOT:
-DATA_PATH:
 NUM_WORKERS: 8
 BATCH_SIZE: 4
 ACCUMULATION_STEPS: 32
@@ -35,10 +29,9 @@ N_LAYERS: 6
 N_HEADS: 8
 NORM_EPS: 1.0e-5
 PATCH_GRID: 64
-MAX_SEQ_LEN: 4096
 
 # Pretrain model
-PRETRAINED_MODEL: /home/lcw/hdd/projects/PuTR/论文数据/mix/train_2024-04-24-11-53/checkpoint_6.pth
+PRETRAINED_MODEL:
 
 # Sampling setting
 SAMPLE_STEPS: [1, 2, 3, 4, 5, 6]
